# apifootball

./: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  setup.py
apifootball/: __init__.py  client.py  clients.py  models.py
apifootball/models/: __init__.py  fixtures.py  leagues.py  shared.py  teams.py
tests/: test_client.py  test_soccer_client.py  tutils.py
tests/data/: 57304c1611a6c618.json  6d650cf8770f55b4.json  b6e39fd9ef3097da.json  e25fbfbc66051a25.json  e80b3e3f4ea1279b.json
