[metadata]
name = apifootball
version = 0.2.0
author = Lucas Maystre
author_email = lucas@maystre.ch
description = Python 3 client for the api-football.com API.
long_description = file: README.rst
url = "https://github.com/PlayfulAI/apifootball"
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    requests
    pydantic

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    black
    flake8
    isort
    pre-commit
    pytest

[flake8]
max-line-length = 88
extend-ignore = E203,W503
